# ESP32-P4-DSI-Support-Hub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  project_include.cmake  sdkconfig  sdkconfig.defaults  todo.md
boards/: sdkconfig.defaults.dfrobot  sdkconfig.defaults.espressif  sdkconfig.defaults.guition  sdkconfig.defaults.olimex  sdkconfig.defaults.waveshare
components/: README.md
components/esp_lcd_dsi/: .component_hash  CHECKSUMS.json  esp_lcd_dsi.c  idf_component.yml
components/esp_lvgl_port/: Kconfig
components/esp_lvgl_port/src/common/ppa/: lcd_ppa.c  lcd_ppa.h
components/esp_lvgl_port/src/lvgl9/: esp_lvgl_port_disp.c
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  esp_err_check.h  idf_component.yml  main.c
main/display/: Luckfox-5inch-DSI-Touchscreen.h
main/hw_config/: dfrobot_firebeetle2_esp32p4.h  espressif_esp32p4_function_ev_board.h  guition_esp32p4_devkit.h  init_hw.c  init_hw.h  olimex_esp32p4_devkit.h  waveshare_esp32p4_module_devkit.h
main/lcd_config/: DFRobot-5inch-DSI-Touchscreen.c  Luckfox-5inch-DSI-Touchscreen.c  amelin-ek79007-7inch-touch-display.c  buydisplay-5inch-ER-TFT050-10.c  init_lcd.h  init_lcd_default.c  rpi-5inch-touch-display-v2.c  rpi-7inch-touch-display-v1.c  rpi-7inch-touch-display-v2.c  waveshare-esp32p4-wifi6-touch-lcd-3.4c.c
